k8s/manifesto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversao-distancia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conversao-distancia
  template:
    metadata:
      labels:
        app: conversao-distancia
    spec:
      containers:
        - name: conversao-distancia
          image: lproenca/conversao-distancia:v1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: conversao-distancia
spec:
  type: LoadBalancer
  selector:
    app: conversao-distancia
  ports:
    - port: 80
      targetPort: 8000
