k8s/ingress-homologacao-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conversao-distancia
  namespace: homologacao
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homolog.lgpcloud.com.br
      secretName: conversao-distancia-tls-homolog
  rules:
    - host: homolog.lgpcloud.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conversao-distancia
                port:
                  number: 80
