k8s/ingress-homologacao-azure.yaml
# Mesma logica do producao-azure: staging primeiro, prod depois de validar.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conversao-distancia
  namespace: homologacao
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - azure-homolog.lgpcloud.com.br
      secretName: conversao-distancia-tls-homolog-azure
  rules:
    - host: azure-homolog.lgpcloud.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conversao-distancia
                port:
                  number: 80
