k8s/ingress-producao-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conversao-distancia
  namespace: producao
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.lgpcloud.com.br
      secretName: conversao-distancia-tls-producao
  rules:
    - host: app.lgpcloud.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conversao-distancia
                port:
                  number: 80
